peac_dev/force-app/main/default/objects/Financial__c/Financial__c.object-meta.xml
<CustomObject>
    <description>This object is created to store financial related information on Opportunity.</description>
    <label>Financial</label>
    <nameField>
        <displayFormat>FD-{000}</displayFormat>
        <label>Financial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>