peac_dev/force-app/main/default/objects/Financial__c/fields/Average_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Average_Deposits__c</fullName>
    <formula>Amount_of_Deposits_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>