peac_dev/force-app/main/default/objects/Financial__c/fields/Average_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Average_Ending_Balance__c</fullName>
    <formula>Ending_Balance_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Ending Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>