peac_dev/force-app/main/default/objects/Financial__c/fields/Average_Negative_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Negative_Days__c</fullName>
    <formula>Negative_Days_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Negative Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>