peac_dev/force-app/main/default/objects/Financial__c/fields/Average_NSFs__c.field-meta.xml
<CustomField>
    <fullName>Average_NSFs__c</fullName>
    <formula>NSFs_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average NSFs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>