peac_dev/force-app/main/default/objects/Financial__c/fields/Average_Number_of_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Average_Number_of_Deposits__c</fullName>
    <formula>Number_of_Deposits_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Number of Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>