peac_dev/force-app/main/default/objects/Financial__c/fields/Average_Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>Average_Opening_Balance__c</fullName>
    <formula>Opening_Balance_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Opening Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>