peac_dev/force-app/main/default/objects/Financial__c/fields/Competitor_Balance__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Balance__c</fullName>
    <label>Competitor Balance</label>
    <summarizedField>Competitor__c.Balance__c</summarizedField>
    <summaryForeignKey>Competitor__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>