peac_dev/force-app/main/default/objects/Financial__c/fields/Competitor_Count__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Count__c</fullName>
    <label>Competitor Count</label>
    <summaryForeignKey>Competitor__c.Financial__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>