peac_dev/force-app/main/default/objects/Financial__c/fields/Daily_Average_Balance_Total__c.field-meta.xml
<CustomField>
    <fullName>Daily_Average_Balance_Total__c</fullName>
    <label>Daily Average Balance Total</label>
    <summarizedField>Financial_Bank_Information__c.Daily_Average_Balance_Average__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>