peac_dev/force-app/main/default/objects/Financial__c/fields/Ending_Balance_Total__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance_Total__c</fullName>
    <label>Ending Balance Total</label>
    <summarizedField>Financial_Bank_Information__c.Ending_Balance_Average__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>