peac_dev/force-app/main/default/objects/Financial__c/fields/Financial_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Financial_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Store opportunity Id as external id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Financial External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>