peac_dev/force-app/main/default/objects/Financial__c/fields/Negative_Days_Total__c.field-meta.xml
<CustomField>
    <fullName>Negative_Days_Total__c</fullName>
    <label>Negative Days Total</label>
    <summarizedField>Financial_Bank_Information__c.Negative_Days_Average__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>