peac_dev/force-app/main/default/objects/Financial__c/fields/NSFs_Total__c.field-meta.xml
<CustomField>
    <fullName>NSFs_Total__c</fullName>
    <label>NSFs Total</label>
    <summarizedField>Financial_Bank_Information__c.NSFs_Average__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>