peac_dev/force-app/main/default/objects/Financial__c/fields/Number_of_Deposits_Total__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deposits_Total__c</fullName>
    <label>Number of Deposits Total</label>
    <summarizedField>Financial_Bank_Information__c.Number_of_Deposits_Average__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>