peac_dev/force-app/main/default/objects/Financial__c/fields/Ratio_ADB_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Ratio_ADB_Monthly_Revenue__c</fullName>
    <formula>(Average_Daily_Balance__c  / ( Annual_Revenue__c / 12))*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratio ADB/Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>