peac_dev/force-app/main/default/objects/Financial__c/fields/Sum_Amount_of_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Sum_Amount_of_Deposits__c</fullName>
    <label>Sum Amount of Deposits</label>
    <summarizedField>Financial_Bank_Information__c.Total_Amount_of_Deposits__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>