peac_dev/force-app/main/default/objects/Financial__c/fields/Sum_Bank_Statement_Count__c.field-meta.xml
<CustomField>
    <fullName>Sum_Bank_Statement_Count__c</fullName>
    <label>Sum Bank Statement Count</label>
    <summarizedField>Financial_Bank_Information__c.Bank_Statement_Count__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>