peac_dev/force-app/main/default/objects/Financial__c/fields/Sum_Daily_Average_Balance__c.field-meta.xml
<CustomField>
    <fullName>Sum_Daily_Average_Balance__c</fullName>
    <label>Sum Daily Average Balance</label>
    <summarizedField>Financial_Bank_Information__c.Total_Daily_Average_Balance__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>