peac_dev/force-app/main/default/objects/Financial__c/fields/Sum_Negative_Days__c.field-meta.xml
<CustomField>
    <fullName>Sum_Negative_Days__c</fullName>
    <label>Sum Negative Days</label>
    <summarizedField>Financial_Bank_Information__c.Total_Negative_Days__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>