peac_dev/force-app/main/default/objects/Financial__c/fields/Sum_NSFs__c.field-meta.xml
<CustomField>
    <fullName>Sum_NSFs__c</fullName>
    <label>Sum NSFs</label>
    <summarizedField>Financial_Bank_Information__c.Total_NSFs__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>