peac_dev/force-app/main/default/objects/Financial__c/fields/Sum_Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>Sum_Opening_Balance__c</fullName>
    <label>Sum Opening Balance</label>
    <summarizedField>Financial_Bank_Information__c.Total_Opening_Balance__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>