peac_dev/force-app/main/default/objects/Financial__c/fields/Suspicious_Activity__c.field-meta.xml
<CustomField>
    <fullName>Suspicious_Activity__c</fullName>
    <description>Count Suspicious Activity from bank statements</description>
    <label>Suspicious Activity</label>
    <summarizedField>Financial_Bank_Information__c.Suspicious_Activity__c</summarizedField>
    <summaryForeignKey>Financial_Bank_Information__c.Financial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>